syntax = "proto3";

package alerts.protobuf;

message BooleanResult {
   bool result = 1;
}
